Fix wrapping of a formatted URI of an action

--- a/src/app/components/action-card/__formatted-href/action-card__formatted-href.scss
+++ b/src/app/components/action-card/__formatted-href/action-card__formatted-href.scss
@@ -1,5 +1,6 @@
 .action-card__formatted-href {
   margin: 14px 0 0;
+  word-break: break-word;
   font-size: 12px;
   font-weight: 600;
   line-height: 16px;
